// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`glimmer-utils ASTPath works as expected 1`] = `
Object {
  "data": false,
  "loc": SourceLocation {
    "end": Object {
      "column": 5,
      "line": 4,
    },
    "source": undefined,
    "start": Object {
      "column": 2,
      "line": 4,
    },
  },
  "original": "foo",
  "parts": Array [
    "foo",
  ],
  "this": false,
  "type": "PathExpression",
}
`;

exports[`glimmer-utils maybeBlockParamDefinition able to handle single fiew params 1`] = `
Object {
  "getParentPath": [Function],
  "index": 1,
  "name": "boo",
  "type": "BlockParam",
}
`;

exports[`glimmer-utils maybeBlockParamDefinition able to handle single param 1`] = `
Object {
  "getParentPath": [Function],
  "index": 0,
  "name": "items",
  "type": "BlockParam",
}
`;
